--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "vbcod/randomgreeting",
     "description": "Generate Random Greeting",
     "type": "library",
+    "license": "MIT",
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.3.0"
